added JUnit5 extension to execute @Test within JavaFX UI thread
Simple JUnit 5 extension to ensure that @test statements are executed in
the JavaFX UI thread. This is (strictly) necessary when testing setter
and/or getter methods of JavaFX classes (ie. Node derived, properties
etc).

See also issue #700
https://github.com/TestFX/TestFX/issues/700

and real-world usage in
https://github.com/GSI-CS-CO/chart-fx/tree/master/chartfx-chart/src/test/java/de/gsi/chart